#428 dashboard overflow fixed

--- a/frontend/src/screens-content/dashboard/dashboard.module.scss
+++ b/frontend/src/screens-content/dashboard/dashboard.module.scss
@@ -243,7 +243,6 @@
   background-color: white;
   box-shadow: rgb(0 0 0 / 14%) 0rem 0.25rem 1.25rem 0rem, rgb(64 64 64 / 40%) 0rem 0.4375rem 0.625rem -0.3125rem;
   width: 500px;
-  height: 400px;
   border-radius: 1rem;
   margin: 0 1rem;
 }
@@ -293,12 +292,6 @@
   text-align: right;
   font-size: 0.8rem;
   font-weight: 200;
-}
-
-.galleryDetailSave {
-  position: absolute !important;
-  bottom: 1rem !important;
-  right: 1rem !important;
 }
 
 .galleryDetailDropzoneContainer {
@@ -388,4 +381,8 @@
   right: 1rem;
   display: flex;
   align-items: center;
+}
+
+.defaultChip {
+  margin: 0 !important
 }
